# poly-tri

./: .gitignore  ALGORITHM.md  API.md  LICENSE  README.md  pixi.toml  polytri.py
.github/workflows/: ci.yml
conda-pkg/: README.md  meta.yaml
polytri/: README.md  __init__.py  _python.py
rust/: Cargo.toml  README_RUST.md  TEST_PLAN.md  build.rs  plan_rust.md  pyproject.toml
rust/src/: lib.rs  polytri.rs  python_bindings.rs
rust/tests/: integration_tests.rs
tests/: conftest.py  debug_constraint_edge.py  debug_constraint_edge_detailed.py  debug_rust.py  easy_1.py  helpers.py  speedtest.py  test.py  test_circle_in_circle.py  test_comparison.py  test_constraint_edge_comparison.py  test_points_mapping.py  test_triangulation.py
