[package]
name = "polytri"
version = "0.1.0"
edition = "2021"

[lib]
name = "polytri"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
pyo3-build-config = "0.20"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
numpy = "0.20"

[profile.release]
opt-level = 3
lto = true

