[package]
name = "polytri"
version = "0.1.0"
edition = "2021"

[lib]
name = "polytri"
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0"
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
numpy = { version = "0.21", optional = true }

[features]
default = []
python = ["pyo3", "numpy"]

[dev-dependencies]

